[project]
name = "aws-byodmim"
version = "0.1.0"
description = "AWS SES BYODKIM Migration and Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.25",
    "click>=8.2.1",
    "pyyaml>=6.0.2",
    "sceptre>=4.5.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["aws_byodmim"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]
